--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <button>View All</button>
       </div>
       <div class="mid-section">
-        <div class="mid-left"><img src="images/midLeft.svg" alt="" /></div>
+        <div class="mid-left"><img src="images/midLeft.svg" alt="" width="80%"/></div>
         <div class="mid-right">
           <h2>We are the most trusted Cryptocurrency Platform</h2>
           <p>
